[tool.poetry]
name = "slackbot-test"
version = "0.1.0"
description = ""
authors = ["takahashimichika"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arxiv = "^2.1.0"
openai = "^1.27.0"
slack = "^0.0.2"
slack-sdk = "^3.27.1"
bs4 = "^0.0.2"
python-dotenv = "^1.0.1"
pytz = "^2024.1"
google-generativeai = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
